--- a/Italian/main/MiKey.apk/res/values-it/strings.xml
+++ b/Italian/main/MiKey.apk/res/values-it/strings.xml
@@ -233,7 +233,7 @@ per eseguire lo scatto"</string>
     <string name="faq_vsm_text">Assicurati di togliere il MiKey prima di rimuovere la cover posteriore!</string>
     <string name="hint_long_press_del">Premi a lungo per eliminare</string>
     <string name="hint_mikey_sprite">"Premi MiKey per eseguire molte operazioni come 
-invio di audio, scattare foto, giocare... 
+invio di audio, scattare foto, giocare… 
 Utilizzando MiKey per alcune funzioni non sarà possibile utilizzare i tasti per certe operazioni"</string>
     <string name="enable_mikey_sprite">Apri Wizard</string>
     <string name="disable_mikey_sprite">Scollega Wizard</string>
