--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -5,7 +5,7 @@
     <string name="sina_share_fail">Invio fallito</string>
     <string name="sina_token_expired_warning">Account Weibo è scaduto: si prega di riassociare</string>
     <string name="sina_token_invalid_warning">Account Weibo  non è valido: si prega di riassociare</string>
-    <string name="sina_share_fail_content_repeat">Impossibile condividere, contenuto già esistente...</string>
+    <string name="sina_share_fail_content_repeat">Impossibile condividere, contenuto già esistente…</string>
     <string name="app_name">Updater</string>
     <string name="get_current">Attuale</string>
     <string name="check_new_version">Cerca</string>
@@ -26,12 +26,12 @@
     <string name="button_text_update">Aggiorna</string>
     <string name="button_text_reboot">Riavvia adesso</string>
     <string name="button_text_later_reboot">Riavvia dopo</string>
-    <string name="download_title_first">Ricezione informazioni di aggiornamento...</string>
-    <string name="download_title_full_download">Ricezione informazioni pacchetto...</string>
+    <string name="download_title_first">Ricezione informazioni di aggiornamento…</string>
+    <string name="download_title_full_download">Ricezione informazioni pacchetto…</string>
     <string name="download_title">Download (%s)</string>
     <string name="apply_title">Aggiornamento (%s)</string>
     <string name="timer_title">Il dispositivo si riavvierà tra %d secondi.</string>
-    <string name="progress_title_checking">Ricerca aggiornamenti...</string>
+    <string name="progress_title_checking">Ricerca aggiornamenti…</string>
     <string name="menu_title_download_current_rom">Scarica pacchetto di aggiornamento</string>
     <string name="menu_title_pick_rom_file">Seleziona pacchetto di aggiornamento</string>
     <string name="menu_title_check_update">Utilizza sono Wi-Fi per scaricare aggiornamenti</string>
@@ -72,14 +72,14 @@
     <string name="notification_reboot_seccess_des">Tocca per condividere.</string>
     <string name="notification_share">Condividi</string>
     <string name="notification_downloading">Download aggiornamento</string>
-    <string name="notification_updating">Aggiornamento...</string>
+    <string name="notification_updating">Aggiornamento…</string>
     <string name="set_network_title">Connessione alla rete</string>
     <string name="set_network_msg">Connettiti alla rete Wi-Fi prima di scaricare questo aggiornamento.</string>
     <string name="set_installfail_title">"Provare a scaricare di nuovo l'aggiornamento?"</string>
     <string name="set_installfail_msg">Il downlaod di questo aggiornamento tramite rete mobile influirà sul tuo traffico dati.</string>
     <string name="set_installfail_title_full">Aggiornamento fallito</string>
     <string name="set_installfail_full_msg">Impossibile aggiornare in questo momento. Tocca \"OK\" per segnalare questo errore ai nostri sviluppatori."</string>
-    <string name="unkown_error_title">Qualcosa è andato storto...</string>
+    <string name="unkown_error_title">Qualcosa è andato storto…</string>
     <string name="download_error">Errore nel download. Aspetta un minuto o due poi riprova.</string>
     <string name="download_again">Scarica di nuovo</string>
     <string name="space_not_enough_title">Spazio insufficiente</string>
