--- a/Italian/main/AntiFake.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiFake.apk/res/values-it/strings.xml
@@ -48,7 +48,7 @@
     <string name="call_phone">Chiama assistenza</string>
     <string name="search_road">Trova una strada</string>
     <string name="share_content_first">Il mio dispositivo Xiaomi è autentico, puoi provare a scaricare AntiFake in italiano da questo link: http://www.miui.it/download-applicazioni-xiaomi/</string>
-    <string name="share_content_second">"Xiaomi AntiFake può identificare l'autenticità di un telefono Xiaomi, ho appena provato e funziona benissimo, ho acquistato un telefono Xiaomi originale! Puoi scaricarle l'app da http://www.miui.it/download-applicazioni-xiaomi/"</string>
+    <string name="share_content_second">"Xiaomi AntiFake può identificare l'autenticità di un telefono Xiaomi, ho appena provato e funziona benissimo, ho acquistato un telefono Xiaomi originale! Puoi scaricare l'app da http://www.miui.it/download-applicazioni-xiaomi/"</string>
     <string name="base">Informazioni di base</string>
     <string name="storage">Memoria</string>
     <string name="cpu">CPU</string>
@@ -57,11 +57,11 @@
     <string name="sensors">Sensori</string>
     <string name="find_new_version">Cerca nuova versione</string>
     <string name="download_in_mobile">Stai utilizzando la rete dati, il download della nuova versione potrebbe consumare traffico dati, vuoi scaricare comunque adesso?</string>
-    <string name="tip_detail_address">Provincia, città, regione, nome della via, numero civino, non meno di 5 parole</string>
-    <string name="tip_help_adults">Si prega di inserire le tue informazioni di contatto, ti contateremo telefonicamente per assisterti con i diritti e i venditori per investigare, e se le informazioni che fornisci sono vere, provvederemo, quando appropriato, certi incentivi.</string>
+    <string name="tip_detail_address">Provincia, città, regione, nome della via, numero civico, non meno di 5 parole</string>
+    <string name="tip_help_adults">Si prega di inserire le tue informazioni di contatto, ti contatteremo telefonicamente per assisterti con i diritti e i venditori per investigare, e se le informazioni che fornisci sono vere, provvederemo, quando appropriato, certi incentivi.</string>
     <string name="tip_input_complete">Si prega di inserire le informazioni complete</string>
-    <string name="capture_tip">Si prega di scansione il codice a barre posizionandolo dentro la cornice</string>
-    <string name="tip_set_cpu_modle">"Mantiere il profilo atuale del tuo telefono in Alte prestazioni, altrimenti potrebbe seriamente compromettere l'accuratezza dei risultati di identificazione"</string>
+    <string name="capture_tip">Si prega di scansionare il codice a barre posizionandolo dentro la cornice</string>
+    <string name="tip_set_cpu_modle">"Mantenere il profilo attuale del tuo telefono in Alte prestazioni, altrimenti potrebbe seriamente compromettere l'accuratezza dei risultati di identificazione"</string>
     <string name="tip_skip_set_cpu_modle">Salta questo passaggio</string>
     <string name="tip_contact">Tue info di contatto:</string>
     <string name="tip_name">Nome</string>
@@ -103,12 +103,12 @@
     <string name="update_right_now">Aggiorna ora</string>
     <string name="download_right_now">Scarica ora</string>
     <string name="tip_update_failed">Aggiornamento automatico fallito</string>
-    <string name="msg_update_failed">"Visita http://www.miui.it/download-applicazioni-xiaomi/ e scrica manualmente l'ultima versione"</string>
+    <string name="msg_update_failed">"Visita http://www.miui.it/download-applicazioni-xiaomi/ e scarica manualmente l'ultima versione"</string>
     <string name="tip_no_sdcard">Inserisci una scheda SD</string>
     <string name="msg_no_sdcard">"L'aggiornamento richiede la scheda SD, avvia di nuovo dopo l'installazione"</string>
     <string name="public_beta">Beta</string>
     <string name="tip_unsupport_device_mode">Il dispositivo non la supporta</string>
-    <string name="msg_unsupport_device_mode">Sono ancora necessarie delle ottimizzazione per le TV Xiaomi, per il momento il tuo dispositivo non è supportato.</string>
+    <string name="msg_unsupport_device_mode">Sono ancora necessarie delle ottimizzazioni per le TV Xiaomi, per il momento il tuo dispositivo non è supportato.</string>
     <string name="tip_uninstall">Suggerimenti per la disinstallazione</string>
     <string name="tip_uninstall_msg">"E' stata rilevata una vecchia versione di AntiFake, devi disinstallarla prima di avviare la nuova verisone"</string>
     <string name="uninstall">Disinstalla subito</string>
