--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -140,7 +140,7 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="skip_setup_account_title">"Salta l'impostazione dell'account"</string>
     <string name="skip_setup_account_msg">Con il tuo account Xiaomi puoi sincronizzare le tue foto, i tuoi sms, le tue chiamate, le tue note etc. Continuare ed impostarlo più tardi?</string>
     <string name="account_dspt">Un solo account per tutti i servizi Xiaomi</string>
-    <string name="account_sec_dspt">MIUI, Mi Cloud, MiMarket, Mi Store</string>
+    <string name="account_sec_dspt">MIUI, Mi Cloud, Mi Market, Mi Store</string>
     <string name="account_sec_dspt2" />
     <string name="remove_unactivated_account_notice">Il tuo account non è stato attivato</string>
     <string name="remove_confirm">Elimina</string>
