--- a/Italian/main/MiKey.apk/res/values-it/strings.xml
+++ b/Italian/main/MiKey.apk/res/values-it/strings.xml
@@ -29,13 +29,13 @@
     <string name="setting_key_mode_dust_cap">key_dust_cap</string>
     <string name="default_toolbox_items">.FlashlightAction,.AudioRecorderAction,.CapturePhotoInstantAction,0</string>
     <string name="default_toolbar_items">.CapturePhotoAction,.FlashlightAction,.AudioRecorderAction,0,0,0</string>
-    <string name="app_name">MiKey</string>
-    <string name="tab_mikey">MiKey</string>
+    <string name="app_name">Mi Key</string>
+    <string name="tab_mikey">Mi Key</string>
     <string name="tab_mikey_sprite">Wizard</string>
     <string name="notify_title_sprite">Wizard</string>
     <string name="notify_content_sprite">Premi sul lato destro per uscire</string>
     <string name="notify_ticker_sprite">Wizard in esecuzione</string>
-    <string name="chooser_dust_cap">MiKey (protezione polvere)</string>
+    <string name="chooser_dust_cap">Mi Key (protezione polvere)</string>
     <string name="click_type_0">Premi</string>
     <string name="click_type_1">Premi 1 volta</string>
     <string name="click_type_2">Premi 2 volte</string>
@@ -93,10 +93,10 @@
     <string name="category_2">Tasto</string>
     <string name="action_close">Chiudi</string>
     <string name="delete_confirm">Sei sicuro di voler cancellare questa azione?</string>
-    <string name="delete_gesture">Eliminare le gesture per Mikey?</string>
+    <string name="delete_gesture">Eliminare le gesture per Mi Key?</string>
     <string name="recommend">Consigliate</string>
     <string name="add">Aggiungi</string>
-    <string name="running_notification">Xiaomi MiKey</string>
+    <string name="running_notification">Xiaomi Mi Key</string>
     <string name="click_to_open">Apri</string>
     <string name="call_to">Chiama</string>
     <string name="sms_to">Invia messaggio a:</string>
@@ -130,7 +130,7 @@
     <string name="cn_1000">1000</string>
     <string name="cn_10000">10000</string>
     <string name="cn_100000000">100000000</string>
-    <string name="splash_tip">Collega MiKey</string>
+    <string name="splash_tip">Collega Mi Key</string>
     <string name="default_action_title">Azione predefinita</string>
     <string name="action_home">Home</string>
     <string name="action_key_direction">Direzione</string>
@@ -159,7 +159,7 @@
     <string name="back_camera">Fotocamera posteriore</string>
     <string name="write_pic_fail">Impossibile salvare immagine!</string>
     <string name="settings">Impostazioni</string>
-    <string name="setting_buy">Acquista MiKey</string>
+    <string name="setting_buy">Acquista Mi Key</string>
     <string name="app_not_installed">Applicazione non installata</string>
     <string name="setting_toolbar">Strumenti</string>
     <string name="setting_toolbar_desc">"Puoi accedere rapidamente alle funzionalità degli strumenti dalla barra di notifica.
@@ -171,7 +171,7 @@ Ora puoi personalizzare i tuoi strumenti!
 Attiva la barra degli strumenti, in ogni caso
 dal cellulare puoi scorrere lo slide in basso per usarla"</string>
     <string name="task_title_prefix">%1$s : %2$s</string>
-    <string name="setting_feedback">Reattività MiKey</string>
+    <string name="setting_feedback">Reattività Mi Key</string>
     <string name="setting_speed_desc">"Una velocità maggiore garantisce maggiore reattività, ma può diminuire il tasso di riconoscimenti corretti Diminuendo la velocità aumenterai il tasso di riconoscimenti corretti ma diminuirà il tempo di risposta. "</string>
     <string name="setting_speed_slow">Più lenta</string>
     <string name="setting_speed_quick">Più veloce</string>
@@ -182,9 +182,9 @@ dal cellulare puoi scorrere lo slide in basso per usarla"</string>
     <string name="setting_instant_photo_text">Prima metti a fuoco</string>
     <string name="setting_vibrate_text">Risposta vibrazione</string>
     <string name="setting_silent_mode">Modalità silenziosa</string>
-    <string name="setting_silent_mode_default">Modalità Cuffie (Scollega MiKey)</string>
-    <string name="setting_silent_mode_dust_cap">Anti-polvere (MiKey)</string>
-    <string name="setting_silent_mode_desc">"Se si desidera collegare l'auricolare, selezionare la modalità cuffia e scollegare il Mikey. In caso contrario, l'uscita audio non funzionerà correttamente."</string>
+    <string name="setting_silent_mode_default">Modalità Cuffie (Scollega Mi Key)</string>
+    <string name="setting_silent_mode_dust_cap">Anti-polvere (Mi Key)</string>
+    <string name="setting_silent_mode_desc">"Se si desidera collegare l'auricolare, selezionare la modalità cuffia e scollegare il Mi Key. In caso contrario, l'uscita audio non funzionerà correttamente."</string>
     <string name="setting_instant_photo_desc">"L'attivazione del Flash permette di ottenere immagini 
 più nitide, ma allunga il tempo impiegato 
 per eseguire lo scatto"</string>
@@ -210,34 +210,34 @@ per eseguire lo scatto"</string>
     <string name="action_baidusearch">Baidu</string>
     <string name="select_baidusearch">Baidu</string>
     <string name="select_baiduvoicesearch">Ricerca vocale Baidu</string>
-    <string name="faq_title">Domande su MiKey</string>
+    <string name="faq_title">Domande su Mi Key</string>
     <string name="faq_speed_title">Azione sconosciuta?</string>
     <string name="faq_speed_text">Differenti dispositivi mobili reagiscono in modo differenti, per questo la velocità può essere regolata nelle impostazioni. Cerca il ritmo adatto per il tuo telefono.</string>
     <string name="faq_focus_title">Perché la foto è sfocata? Perché lo scatto è lento?</string>
     <string name="faq_focus_text">"Il flash allunga il tempo necessario per ottenere una immagine, ma il risultato è una immagine più nitida. Puoi provare a disattivare il flash per permettere alla funzione AF di scattare più velocemente, ma l'immagine potrebbe essere sfocata"</string>
-    <string name="faq_plug_title">Come inserire il MiKey correttamente?</string>
-    <string name="faq_plug_text">Questo metodo per inserire il MiKey previene potenziali problemi. Assicurati di inserirlo senza premere il pulsante.</string>
+    <string name="faq_plug_title">Come inserire il Mi Key correttamente?</string>
+    <string name="faq_plug_text">Questo metodo per inserire il Mi Key previene potenziali problemi. Assicurati di inserirlo senza premere il pulsante.</string>
     <string name="faq_misreq_title">Cosa fare in caso di malfunzionamenti?</string>
-    <string name="faq_misreq_text">"Se il controllo della musica nella schermata di blocco non risponde, ferma la musica, rimuovi l'app dalla RAM, riconnetti il Mikey e riavvia l'app MiKey. Siamo a conoscenza di questo bug e stiamo lavorando per risolverlo."</string>
+    <string name="faq_misreq_text">"Se il controllo della musica nella schermata di blocco non risponde, ferma la musica, rimuovi l'app dalla RAM, riconnetti il Mi Key e riavvia l'app Mi Key. Siamo a conoscenza di questo bug e stiamo lavorando per risolverlo."</string>
     <string name="faq_comp_title">Con quali telefoni è compatibile?</string>
-    <string name="faq_comp_text">"Oltre agli Xiaomi, tutti i telefono di ultima generazione sono in grado di utilizzarlo. Per via di u tasto X aggiuntivo su alcuni Xiaomi, il MiKey supporta solo i sistemi MIUI-V5. E' inoltre necessario scaricare l'applicazione Mikey"</string>
+    <string name="faq_comp_text">"Oltre agli Xiaomi, tutti i telefono di ultima generazione sono in grado di utilizzarlo. Per via di u tasto X aggiuntivo su alcuni Xiaomi, il Mi Key supporta solo i sistemi MIUI-V5. E' inoltre necessario scaricare l'applicazione Mi Key"</string>
     <string name="faq_voice_title">Non senti nessun suono in chiamata?</string>
-    <string name="faq_voice_text">Togli e rimetti il MiKey ed accertati di aver scelto MiKey</string>
+    <string name="faq_voice_text">Togli e rimetti il Mi Key ed accertati di aver scelto Mi Key</string>
     <string name="faq_slow_title">La reazione ai click è troppo lenta?</string>
     <string name="faq_slow_text">Il tempo di click può essere impostato a 0, questo dovrebbe essere sufficiente per</string>
-    <string name="faq_quni_title">Quanto dura il MiKey?</string>
+    <string name="faq_quni_title">Quanto dura il Mi Key?</string>
     <string name="faq_quni_text">Dovrebbe sopportare più di 30 mila pressioni, dipende però da come viene usato</string>
     <string name="faq_stat_title">Perché il numero dei click è a zero?</string>
     <string name="faq_stat_text">Il ranking viene azzerato ogni notte, per cui ogni risveglio è un nuovo inizio</string>
     <string name="faq_vsm_title">Precauzioni</string>
-    <string name="faq_vsm_text">Assicurati di togliere il MiKey prima di rimuovere la cover posteriore!</string>
+    <string name="faq_vsm_text">Assicurati di togliere il Mi Key prima di rimuovere la cover posteriore!</string>
     <string name="hint_long_press_del">Premi a lungo per eliminare</string>
-    <string name="hint_mikey_sprite">"Premi MiKey per eseguire molte operazioni come 
+    <string name="hint_mikey_sprite">"Premi Mi Key per eseguire molte operazioni come 
 invio di audio, scattare foto, giocare… 
-Utilizzando MiKey per alcune funzioni non sarà possibile utilizzare i tasti per certe operazioni"</string>
+Utilizzando Mi Key per alcune funzioni non sarà possibile utilizzare i tasti per certe operazioni"</string>
     <string name="enable_mikey_sprite">Apri Wizard</string>
     <string name="disable_mikey_sprite">Scollega Wizard</string>
     <string name="dialog_title_disable_mikey_sprite">Confermare scollegamento di Wizard?</string>
     <string name="splash_mikey_sprite">"Tocca un punto qualsiasi dello schermo
-e premi MiKey"</string>
+e premi Mi Key"</string>
 </resources>
