--- a/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="music_headset_settings">Auricolari</string>
+    <string name="music_headset_button_settings">Assegna tasti remoti</string>
+    <string name="music_headset_mode_volume">Controlla il livello del volume</string>
+    <string name="music_headset_mode_music">Controlla la riproduzione della musica</string>
+    <string name="music_headset_calibrate">Assegna tasti remoti degli auricolari</string>
+    <string name="music_headset_calibrate_hint">Premi il tasto superiore</string>
+    <string name="music_headset_calibrate_success">Impostazioni applicate</string>
+    <string name="music_headset_calibrate_apply">Usa</string>
+    <string name="music_headset_calibrate_volume_up">Aumenta volume</string>
+    <string name="music_headset_calibrate_volume_down">Diminuisci volume</string>
+    <string name="music_headset_calibrate_prev_track">Traccia precedente</string>
+    <string name="music_headset_calibrate_next_track">Traccia successiva</string>
+    <string name="music_headset_calibrate_confirm">Applicare queste impostazioni?</string>
+    <string name="music_headset_no_contected">Auricolari non rilevati</string>
+    <string name="music_headset_calibrate_wrong_key">Questo è il pulsante sbagliato</string>
+    <string name="music_mi_effect_title">Dirac HD Sound</string>
+    <string name="music_mi_effect_summary">Abilita sempre Dirac HD Sound se ascolti tramite altoparlante</string>
+    <string name="music_headphone_settings">Impostazione tipo di auricolari</string>
+    <string name="music_dirac_mode_in_ear">Cuffie Mi in-ear</string>
+    <string name="music_dirac_mode_earbuds">Auricolari Mi</string>
+    <string name="music_dirac_mode_piston_100">Mi piston-1</string>
+    <string name="music_dirac_mode_general">Generale</string>
+    <string name="music_dirac_mode_general_earbuds">Generali</string>
+    <string name="music_dirac_mode_general_inear">In-ear normale</string>
+    <string name="music_dirac_mode_piston_2">Mi piston-2</string>
+    <string name="music_dirac_mode_piston_youth">Mi piston-youth</string>
+    <string name="music_audio_effect_settings">Impostazioni audio</string>
+    <string name="music_equalizer">Equalizzatore</string>
     <string name="menu_item_show_more">Altro</string>
     <string name="ringtone_mute">Nessuna</string>
     <string name="title_system_resource">Risorse di sistema</string>
@@ -1048,7 +1076,7 @@ Per cancellare musica, foto e altri dati dell'utente, è necessario cancellare i
     <string name="install_applications">Origini sconosciute</string>
     <string name="install_unknown_applications">"Consenti l'installazione di applicazioni da fonti sconosciute"</string>
     <string name="install_all_warning">"Il tablet e i dati personali sono più vulnerabili agli attacchi da parte di applicazioni di origini sconosciute. L'utente accetta di essere il solo responsabile degli eventuali danni al tablet o della perdita di dati che potrebbero derivare dall'utilizzo di queste applicazioni."</string>
-    <string name="verify_applications">Verifica app</string>
+    <string name="verify_applications">Verifica applicazioni</string>
     <string name="verify_applications_summary">"Non consentire o avvisa prima dell'installazione di applicazioni che potrebbero causare danni"</string>
     <string name="advanced_settings">Impostazioni avanzate</string>
     <string name="advanced_settings_summary">Attiva altre impostazioni</string>
@@ -1751,7 +1779,7 @@ L'approccio di Google alla sincronizzazione di dati per consentirti l'accesso ai
     <string name="show_screen_updates_summary">"Flash delle superfici delle finestre all'aggiornamento"</string>
     <string name="show_hw_screen_updates">Aggiornamenti visualizz. GPU</string>
     <string name="show_hw_screen_updates_summary">Flash delle visualizzazioni dentro le finestre se disegnate con GPU</string>
-    <string name="show_hw_layers_updates">Aggiornam. livelli hardware</string>
+    <string name="show_hw_layers_updates">Aggiornamenti livelli hardware</string>
     <string name="show_hw_layers_updates_summary">Lampeggia verde se aggiornam. livelli hardware</string>
     <string name="debug_hw_overdraw">Debug overdraw GPU</string>
     <string name="disable_overlays">Disabilita overlay HW</string>
@@ -2623,6 +2651,11 @@ ed esegui il software."</string>
     <string name="free_wifi_speed_title">Connessione lenta?</string>
     <string name="free_wifi_connected_time">Durata: %1$s</string>
     <string name="free_wifi_confirm">Ho capito</string>
+	<string name="manage_xiaomi_router">Gestisci router Xiaomi</string>
+    <string name="xiaomi_router_notif_title">Notifica router Xiaomi</string>
+    <string name="xiaomi_router_notif_summary">Avvisami quando un router Xiaomi è disponibile</string>
+    <string name="xiaomi_router_available_notif_title">Un router Xiaomi è disponibile</string>
+    <string name="xiaomi_router_available_notif_summary">Tocca per visualizzare</string>
     <string name="restrict_background_data_title">Limita dati in background</string>
     <string name="restrict_background_data_dialog_summary">Le app in esecuzione in background non possono ricevere messaggi</string>
     <string name="restrict_background_data_notification_summary">Le app non possono connettersi alla rete se i dati in background sono limitati</string>
@@ -2678,7 +2711,19 @@ ed esegui il software."</string>
     <string name="priority_storage_app_settings">Archiviazione dati %1$s</string>
     <string name="add_auto_startup_application">Aggiungi applicazione</string>
     <string name="power_autorun_apps_empty">Nessuno</string>
-    <string name="miracast_settings">Display wireless</string>
+    <string name="recent_location_requests_title">Accesso alla posizione</string>
+    <string name="recent_location_requests_summary">Le applicazioni seguenti richiedono di vedere le informazioni sulla tua posizione</string>
+    <string name="bluetooth_unlock_title">Sblocca tramite dispositivo Bluetooth</string>
+    <string name="bluetooth_unlock_turned_off">Disattivato</string>
+    <string name="bluetooth_unlock_turned_on">Attivato</string>
+    <string name="bluetooth_unlock_settings_toggle_title">Applica a</string>
+    <string name="bluetooth_unlock_settings_unlock_device">Sblocca dispositivo</string>
+    <string name="bluetooth_unlock_settings_devices_title">Dispositivo</string>
+    <string name="bluetooth_unlock_no_matched_device_yet">Nessun dispositivo rilevato</string>
+    <string name="bluetooth_unlock_change_matched_device">Scegli un altro dispositivo</string>
+    <string name="bluetooth_unlock_add_device">Aggiungi dispositivo</string>
+    <string name="bluetooth_unlock_delete_device">Cancella questo dispositivo</string>
+	<string name="miracast_settings">Display wireless</string>
     <string name="miracast_settings_category">Impostazioni display wireless</string>
     <string name="miracast_add_sink_title">Aggiungi display wireless</string>
     <string name="miracast_display_category">Display</string>
