--- a/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
@@ -384,11 +384,11 @@
     <string name="yes">Sì</string>
     <string name="no">No</string>
     <string name="save">Salva</string>
-    <string name="autofix">Correzione automatica</string>
-    <string name="crop">Rifila</string>
+    <string name="autofix">Correzione auto.</string>
+    <string name="crop">Ritaglia</string>
     <string name="crossprocess">Cross-process</string>
     <string name="documentary">Documentario</string>
-    <string name="doodle">Scarabocchio</string>
+    <string name="doodle">Pennello</string>
     <string name="duotone">Bitonale</string>
     <string name="facelift">Luminosità viso</string>
     <string name="facetan">Colorito viso</string>
@@ -397,7 +397,7 @@
     <string name="flip">Capovolgi</string>
     <string name="grain">Grana pellicola</string>
     <string name="grayscale">B/n</string>
-    <string name="highlight">Alte luci</string>
+    <string name="highlight">Lumin.</string>
     <string name="lomoish">Effetto Lomo</string>
     <string name="negative">Negativo</string>
     <string name="posterize">Posterizza</string>
@@ -411,7 +411,7 @@
     <string name="temperature">Calore</string>
     <string name="tint">Tinta</string>
     <string name="vignette">Vignetta</string>
-    <string name="crop_tooltip">Trascina gli indicatori per rifilare la foto</string>
+    <string name="crop_tooltip">Trascina gli indicatori per ritagliare la foto</string>
     <string name="doodle_tooltip">Disegna sulla foto per scarabocchiarla</string>
     <string name="flip_tooltip">Trascina la foto per girarla</string>
     <string name="redeye_tooltip">Tocca per rimuovere gli occhi rossi</string>
